Fix overflow bug

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,7 +14,7 @@ body, html{
 #home-cover{
   display: table;
   width: 100%;
-  min-height: 700px;
+  min-height: 800px;
   padding: 100px 0;
   text-align: center;
   color: #fff;
